syntax = "proto3";

package colorgame;

option go_package = "github.com/frankieli/game_product/shared/proto/colorgame";

import "shared/proto/common/common.proto";

// ColorGameGSService defines the interface for GS operations
service ColorGameGSService {
  // PlaceBet handles placing a bet
  rpc PlaceBet(ColorGamePlaceBetReq) returns (ColorGamePlaceBetRsp);

  // GetState returns the current game state
  rpc GetState(ColorGameGetStateReq) returns (ColorGameGetStateRsp);

  // RoundResult handles round result notification from GMS
  rpc RoundResult(ColorGameRoundResultReq) returns (ColorGameRoundResultRsp);
}

// ColorGameGMSService defines the interface for GMS operations
service ColorGameGMSService {
  // RecordBet records a bet in GMS
  rpc RecordBet(ColorGameRecordBetReq) returns (ColorGameRecordBetRsp);

  // GetCurrentRound gets the current round from GMS
  rpc GetCurrentRound(ColorGameGetCurrentRoundReq) returns (ColorGameGetCurrentRoundRsp);
}


message ColorGamePlaceBetReq {
  int64 user_id = 1;
  ColorGameReward color = 2;
  int64 amount = 3;
}

message ColorGamePlaceBetRsp {
  common.ErrorCode error_code = 1;
  string bet_id = 2;
  string error = 3;
}

message ColorGameGetStateReq {
  int64 user_id = 1;
}

message ColorGameGetStateRsp {
  common.ErrorCode error_code = 1;
  bytes state_json = 2;
}

message ColorGameRecordBetReq {
  string round_id = 1;
  int64 user_id = 2;
  ColorGameReward color = 3;
  int64 amount = 4;
}

message ColorGameRecordBetRsp {
  common.ErrorCode error_code = 1;
  string error = 2;
}

message ColorGameGetCurrentRoundReq {
  int64 user_id = 1;
}

message ColorGamePlayerBet {
  ColorGameReward color = 1;
  int64 amount = 2;
}

message ColorGameGetCurrentRoundRsp {
  common.ErrorCode error_code = 1;
  string round_id = 2;
  ColorGameState state = 3;
  int64 betting_end_timestamp = 4;
  repeated ColorGamePlayerBet player_bets = 5;
  int64 left_time = 6;
}



enum ColorGameState {
  GAME_STATE_UNSPECIFIED = 0;
  GAME_STATE_ROUND_STARTED = 1;
  GAME_STATE_BETTING = 2;
  GAME_STATE_DRAWING = 3;
  GAME_STATE_RESULT = 4;
  GAME_STATE_ROUND_ENDED = 5;
  GAME_STATE_STOPPED = 6;
}

enum ColorGameReward {
  REWARD_UNSPECIFIED = 0;
  REWARD_RED = 1;
  REWARD_GREEN = 2;
  REWARD_BLUE = 3;
  REWARD_YELLOW = 4;
}

message ColorGameRoundStateBRC {
  string round_id = 1;
  ColorGameState state = 2;
  int64 betting_end_timestamp = 3;
  int64 left_time = 4;
}

// ColorGameSettlementBRC is sent to users after round settlement
// 有下注和無下注的玩家收到的欄位不同
message ColorGameSettlementBRC {
  string round_id = 1;
  ColorGameReward winning_color = 2;
  
  // 以下欄位只有下注的玩家才有值
  string bet_id = 3;           // 下注 ID（無下注時為空）
  ColorGameReward bet_color = 4;        // 下注顏色（無下注時為空）
  int64 bet_amount = 5;        // 下注金額（無下注時為 0）
  int64 win_amount = 6;        // 贏得金額（無下注或輸了時為 0）
  bool is_winner = 7;          // 是否贏家（無下注時為 false）
}

message ColorGameRoundResultReq {
  string round_id = 1;
  ColorGameReward result = 2;
}

message ColorGameRoundResultRsp {
  common.ErrorCode error_code = 1;
  string error = 2;
}
